[gd_scene load_steps=2 format=3 uid="uid://d8do8ae5x2ai"]

[ext_resource type="Script" uid="uid://bvwh2cdwhq1ld" path="res://objects/buttons/number_buttons/number_btn.gd" id="1_pgaxo"]

[node name="NumberBtn" type="Node2D"]
script = ExtResource("1_pgaxo")
number = null

[node name="Button" type="Button" parent="."]
offset_right = 100.0
offset_bottom = 70.0

[node name="Label" type="Label" parent="Button"]
layout_mode = 0
offset_right = 100.0
offset_bottom = 70.0
theme_override_font_sizes/font_size = 49
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="button_pressed" from="." to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
